k8s/sampleapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpleapp-service
spec:
  selector:
    app: simpleapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
