k8s/sampleapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simpleapp-frontend-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: centos.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
            path: /sampleapp
